[package]
name = "starknet-crypto-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "starknet_crypto_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
starknet-crypto = "0.6.1"

[build-dependencies]
cc = { version = "1" }
pyo3-build-config = { version = "^0.20" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = "off"
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0
